# fetchi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
.github/workflows/: deployment.yml  integration.yml
fetchi/: server.py
fetchi/scripts/: datacheck.py
fetchi/static/: data.csv
tests/: conftest.py  test_server.py
