[tool.poetry]
name = "fetchi"
version = "0.1.0"
description = "HTTP Backend to Fetch Data"
authors = ["Shiny Brar <charanjotbrar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sanic = {version = "^23.12.1", extras = ["ext"]}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
