[tool.poetry]
name = "fetchi"
version = "0.2.0"
description = "HTTP Backend to Fetch Data"
authors = ["Shiny Brar <charanjotbrar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sanic = {version = "^23.12.1", extras = ["ext"]}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.1.1"
sanic-testing = "^23.12.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
